[tool.poetry]
name = "data-enrichment-agents"
version = "0.1.0"
description = "Data-enrichment tool for leads list using AI Research Agents"
authors = ["Isaac-Porat"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
